cmake_minimum_required(VERSION 3.23)
project(AoC22)

set(CMAKE_CXX_STANDARD 20)

add_executable(
        AoC22
        #day1/day1.cpp
        #day2/day2a.cpp day2/day2b.cpp
        #day3/day3a.cpp day3/day3b.cpp
        #day4/day4.cpp day4/day4.hpp
        #day5/day5.cpp day5/day5.hpp
        #day6/day6.cpp
        #day7/day7a.cpp day7/day7b.cpp
        #day8/day8a.cpp day8/day8b.cpp
        #day9/day9a.cpp
        #day9/day9b.cpp
        #day10/day10a.cpp
        #day10/day10b.cpp
        #day11/day11a.cpp
        #day11/MonkeyA.hpp day11/MonkeyA.cpp
        day11/MonkeyB.hpp day11/MonkeyB.cpp
        day11/day11b.cpp
)
